# vibe-compiler

./: .env.sample  .gitignore  README.md  cli.py  main.py  pyproject.toml  test.py  test_compile.py  todos.md
src/: compile.py  compiler.py  files.py  llm.py  program.py  prompts.py  run.py  schemas.py  tools.py  vibe.py
src/providers/: gemini.py
vibes/: example.csv  example.vibec  locate_neighborhoods.vibe  neighborhoods.vibe  neighborhoods_logs.txt  nested_maps.vibe  nested_maps.vibec  portent.vibe  portent.vibec  test.py
